<resources>
    <string name="app_name">TextApp</string>

    <string name="passwordLogin">账号密码登录</string>
    <string name="qrcodeLogin">二维码登录</string>
    <string name="nfcLogin">NFC卡登录</string>

    <string name="save">保存</string>

    <string name="userid">账号：</string>
    <string name="en_userid">user_id</string>
    <string name="inputUserId">请输入账号：</string>
    <string name="password">密码：</string>
    <string name="en_password">password</string>
    <string name="inputPassword">请输入密码：</string>
    <string name="rememberPassword">记住密码</string>
    <string name="confirmPassword">请确认密码：</string>
    <string name="login">登录</string>
    <string name="clickRegister">点击注册</string>
    <string name="register">注册</string>
    <string name="inputContent">输入文字</string>
    <string name="name">名字：</string>
    <string name="yourName">你的名字：</string>
    <string name="en_name">name</string>
    <string name="age">年龄：</string>
    <string name="inputAge">请输入年龄：</string>
    <string name="en_age">age</string>
    <string name="male">男生</string>
    <string name="female">女生</string>
    <string name="icon_description">这是跳转到其他视图的图标</string>
    <string name="refresh">刷新二维码</string>
    <string name="showQRCode">展示二维码</string>
    <string name="ScanQRCode">扫码登录其他设备</string>
    <string name="Hardware">设  备</string>
    <string name="ScanBarcode">Scan Barcode</string>
    <string name="Stepper_motor">步 进 电 机</string>
    <string name="Start">启 动</string>
    <string name="Stop">停 止</string>
    <string name="Clockwise">顺 时 针</string>
    <string name="Counterclockwise">逆 时 针</string>
    <string name="Yellow_Led">亮 黄 灯</string>
    <string name="Red_Led">亮 红 灯</string>
    <string name="Green_Led">亮 绿 灯</string>
    <string name="Lattice_Start">点 阵 开</string>
    <string name="Lattice_Stop">点 阵 关</string>
    <string name="Exit">退 出</string>
    <string name="Go_in">进 门</string>
    <string name="Open">打  开</string>
    <string name="Read">读  取</string>
</resources>