<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="start|center_vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/userid"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editText_userId"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/drawable_edit_text"
            android:autofillHints="user_id"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:hint="@string/inputUserId"
            android:inputType="text"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textColorHint="@color/grey"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/drawable_edit_text"
            android:autofillHints="password"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:hint="@string/inputPassword"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"/>

    </LinearLayout>
    
    <CheckBox
        android:id="@+id/checkbox_restore_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:background="@color/white"
        android:text="@string/rememberPassword"
        android:textSize="20sp"
        android:checked="false"
        android:layout_marginBottom="1dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="16sp"
            android:layout_marginEnd="120dp"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clickRegister"
            android:textSize="16sp"
            android:textColor="@color/blue"/>


    </LinearLayout>



    
</LinearLayout>