<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginBottom="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/inputUserId"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/editText_register_userId"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/drawable_edit_text"
                android:autofillHints="user_id"
                android:padding="6dp"
                android:inputType="text"
                android:maxLength="11"
                android:textColor="@color/black"
                android:hint="@string/en_userid"
                android:textColorHint="@color/grey"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginBottom="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/inputPassword"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginEnd="12dp"/>

            <EditText
                android:id="@+id/editText_register_password"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_edit_text"
                android:autofillHints="password"
                android:padding="6dp"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/black"
                android:hint="@string/en_password"
                android:textColorHint="@color/grey"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginBottom="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/confirmPassword"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginEnd="12dp"/>

            <EditText
                android:id="@+id/editText_confirm_password"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_edit_text"
                android:autofillHints="password"
                android:padding="6dp"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/black"
                android:hint="@string/en_password"
                android:textColorHint="@color/grey"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginBottom="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="14dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/yourName"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginEnd="17dp"/>

            <EditText
                android:id="@+id/editText_register_name"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_edit_text"
                android:autofillHints="name"
                android:padding="6dp"
                android:layout_gravity="center"
                android:inputType="text"
                android:textColor="@color/black"
                android:hint="@string/en_name"
                android:textColorHint="@color/grey"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginBottom="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/inputAge"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginEnd="12dp"/>

            <EditText
                android:id="@+id/editText_register_age"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/drawable_edit_text"
                android:autofillHints="age"
                android:padding="6dp"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/black"
                android:hint="@string/en_age"
                android:textColorHint="@color/grey"
                android:layout_marginEnd="50dp"/>

            <RadioGroup
                android:id="@+id/radioGroup_register_gender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/male"
                    android:textSize="20sp"
                    android:layout_marginEnd="12dp"/>

                <RadioButton
                    android:id="@+id/radioButton_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/female"
                    android:textSize="20sp"/>
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal"
                android:gravity="center"
                android:text="@string/register"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>