<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activity.LoginActivity"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/button_login_password"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/passwordLogin"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/button_login_qrcode"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/qrcodeLogin"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/button_login_nfc"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nfcLogin"
                android:textSize="16sp"
                android:textColor="@color/black"/>



        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_login_show"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:orientation="vertical">

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            tools:text="hello,world"/>-->


    </LinearLayout>

</LinearLayout>